--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
 	<groupId>com.cda.jee</groupId>
 	<artifactId>crypto</artifactId>
-	<version>1.0-SNAPSHOT</version>
+	<version>1.0.0</version>
 	<name>crypto</name>
 	<packaging>war</packaging>
 
