--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,11 @@
 				<artifactId>maven-war-plugin</artifactId>
 				<version>3.3.0</version>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>3.0.0-M5</version>
+			</plugin>
 		</plugins>
 	</build>
 </project>
